fix(locale): use Locale.of() for Java 21, clarify from() contract in test